creusot/tests/should_fail/prusti/expiry/bad_lifetime.stderr
error[creusot]: use of undeclared lifetime name 'x
 --> bad_lifetime.rs:4:16
  |
4 | #[after_expiry('x, true)]
  |                ^^

error: aborting due to previous error

